# unwind-context

./: CHANGELOG.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  check.sh  deny.toml  diff-docs-readme.sh
.github/workflows/: build.yml  coverage.yml
examples/: demo.html  demo.rs
scripts/: build-coverage-report-html.sh  build-docs.sh
src/: arg.rs  args.rs  color_scheme.rs  colored.rs  context.rs  context_data.rs  context_with_fmt.rs  context_with_io.rs  debug_with.rs  func.rs  func_name.rs  lib.rs  non_exhaustive.rs  panic_detector.rs  set_colors.rs  test_common.rs  test_util.rs  util_macros.rs
tests/: version.rs
tests/no-alloc/: Cargo.toml
tests/no-alloc/src/: main.rs
tests/no-std/: Cargo.toml
tests/no-std/src/: main.rs
